--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Project_AF</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pwd"><u>Forgot your Password?</u></string>
+    <string name="signup">New here? <u>Sign Up instead</u></string>
+    <string name="login">Do you have an account? <u><b>Log in</b></u></string>
 </resources>
