Drawer Layout created in HomePage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="pwd"><u>Forgot your Password?</u></string>
     <string name="signup">New here? <u>Sign Up instead</u></string>
     <string name="login">Do you have an account? <u><b>Log in</b></u></string>
+
+    <string name="nav_drawer_open">Open Navigation Drawer</string>
+    <string name="nav_drawer_close">Close Navigation Drawer</string>
 </resources>
